[package]
name = "ReSS"
version = "1.1.3"
edition = "2021"
description = "RE:[SS] is a launcher made specifically for the old Star Stable Online versions, using PXStudioRuntimeMMO."

[dependencies]
eframe = "0.18.0"
egui_extras = { version = "0.18.0", features = ["image"] }
image = { version = "0.24.2", default-features = false, features = ["png"] }
notify-rust = "4.5.8"